--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@ I need to think like a problem solver since coding isn’t just about writing sy
        <h2>Certifications</h2>
                        <ul type = "circle">
 <li>Artificial Intelligence & Machine Learning - Global Theoritcal Research</li>
-            <a href="AI and ML Certificate.pdf" target="_blank" class="download-button">Download</a>
+            <a href="AI And ML.pdf" target="_blank" class="download-button">Download</a>
                         <li>Mobile app development -(Global Theoretical Research)</li>          
         </div>
     </section>
